--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,77 @@
-html,
-body {
+@import url('https://v1.fontapi.ir/css/Vazir');
+
+*{
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: vazir,-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+:root{
+  --yellow:#fc0;
+  --black:black;
+  --gray:#f0eff5;
+  --yellow2:#fff5cc;
+}
+body{
+  background-color:var(--gray)
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
+.header{
+  background-color:var(--black);
+}
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.menu{
+  color: var(--black);
+  background-color:var(--yellow);
+}
+@media (min-width: 991px){
+  .menu{
+    border-radius: 45px 0 0 45px;
+  } 
+}
+.menuItems{
+  font-size: 12px;
+}
+.finalyItems{
+  font-size: 13px;
+}
+.green{
+  color: rgb(62, 207, 62);
+}
+.fs{
+  font-size: 7px;
+}
+.SmallBox{
+  color: var(--yellow);
+}
+.finaly{
+  background-color: var(--gray);
+}
+.bgYellow{
+  background-color: var(--yellow);
+}
+.finaly:checked{
+  background-color: var(--yellow);
+}
+.selectedSharjeType{
+  background-color: var(--yellow);
+}
+.pointer{
+  cursor: pointer;
+}
+.mobDit{
+  border-color:var(--yellow) !important;
+  background-color: var(--yellow2);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
+@import 'bootstrap/dist/css/bootstrap.css';
+@import 'bootstrap-icons/font/bootstrap-icons.css';
